<resources>
    <string name="app_name">DiaCare</string>
    <string name="daily_tip_loading">Loading Daily Tip&#8230;</string>
    <string name="blood_sugar_tracking">Blood Sugar Tracking</string>
    <string name="carb_calculator">Carbohydrate Calculator</string>
    <string name="error_enter_value">Please enter a value!</string>
    <string name="blood_sugar_record_format">%1$s -> %2$d mg/dL (%3$s)</string>
    <string name="save">Save</string>
    <string name="blood_sugar_hint">Enter your blood sugar value (mg/dL)</string>
    <string name="total_carbs_format">Total: %.1f g</string>
    <string name="clear">Clear</string>
    <string name="error_no_internet_tip">Could not load daily tip. Check your internet connection.</string>
    <string name="notification_title">Measurement Reminder</string>
    <string name="notification_message">Time to check your blood sugar level!</string>
    <string name="channel_name">DiaCare Reminders</string>
    <string name="channel_description">Daily blood sugar measurement reminders</string>

    <string name="select_food">Select Food</string>
    <string name="add_selected_food">Add Selected Food</string>
    <string name="selected_food_label">Selected: %s</string>
    <string name="no_food_selected">No food selected</string>
    <string name="selected_foods_title">Selected Foods:</string>
    <string name="no_foods_added">No foods added yet</string>
    <string name="about_title">About DiaCare</string>
    <string name="about_message">DiaCare is a health tracking app designed to help individuals manage their blood sugar levels and carbohydrate intake.\n\nDeveloped for CMPE2004 Advanced Programming course.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="food_added" formatted="false">%s added (%.1f g carbs)</string>
    <string name="please_select_food">Please select a food first!</string>

    <string name="menu_about">About</string>
    <string name="menu_emergency">Emergency Call</string>
</resources>
